@@ -138,5 +138,5 @@ D: issue 156
 N: Andrew Scheller
 E: gcode@loowis.durge.org
 C: UK
-D: issue 158, 161, 163
+D: issue 158, 161, 163, 167
 
